objects/FieloPRM_BadgeMemberHistory__c.object
<CustomObject>
    <fields>
        <fullName>F_PRM_Badge__c</fullName>
        <label>Badge</label>
        <referenceTo>FieloEE__Badge__c</referenceTo>
        <relationshipLabel>Badge Member Histories</relationshipLabel>
        <relationshipName>Badge_Member_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>F_PRM_CompletionPercentage__c</fullName>
        <label>Completion Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_PRM_ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_PRM_FromDate__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_PRM_Member__c</fullName>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Badge Member Histories</relationshipLabel>
        <relationshipName>Badge_Member_Histories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>F_PRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Badge Member History</label>
    <nameField>
        <label>Badge Member History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badge Member Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>